service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: applications
spec:
  selector: 
    app: jenkins-server
  type: NodePort  
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 32000
